[package]
name = "rbf3"
version = "0.1.0"
authors = ["Glenn Winbo Sondell glennpub@pm.me", "Raph Levien <raph.levien@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
keywords = ["interpolation", "scatter", "rbf"]
categories = ["science"]
repository = "https://github.com/GlennWSo/rbf-interp"
readme = "README.md"
description = "An implementation of Radial Basis Function multidimensional interpolation"


[features]
serde = ["dep:serde", "nalgebra/serde", "nalgebra/serde-serialize", "nalgebra/serde_derive"]

[dependencies]
nalgebra = { version = "0.18" }
nalgebra-sparse = "0.10.0"
serde = { version = "1.0.213", features = ["derive"], optional = true}
